# libbgl

./: ..gitignore.un~  .gitignore  ChangeLog  Makefile  Makefile.in  README.md  TODO  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  bglFileOps.c  bglHeader.c  bglOpen.c  error.c  fileOps.c  header.c  libbgl.h  open.c  section.c
src/.deps/: bglError.Plo  bglFileOps.Plo  bglHeader.Plo  bglOpen.Plo
utils/: Makefile  Makefile.am  Makefile.in  README  libbgl-countairports  libbgl-rawheader.c  libbgl-sectioninfo.c
utils/.deps/: libbgl-countairports.Po  libbgl-rawheader.Po
